# geo-django

./: .gitignore  in.html  manage.py  pyproject.toml  requirements.txt
doctermapp/: admin.py  apps.py  models.py
doctermapp/api/: serializers.py  urls.py  view.py
doctermapp/api/.cph/: .serializers.py_6346448fee980260b38be2252bf073ca.prob
doctermapp/migrations/: 0001_initial.py  0002_county_street.py
geoproject/: asgi.py  settings.py  urls.py  wsgi.py
gisapp/: admin.py  apps.py  load_layer.py  models.py  urls.py  views.py
gisapp/api/: serializers.py  views.py
gisapp/migrations/: 0001_initial.py  0002_counties.py  0003_alter_counties_adm0alt1en.py  0004_alter_counties_adm0_ar_alter_counties_adm0_en_and_more.py  0005_provinces.py  0006_alter_provinces_adm0_ar_alter_provinces_adm0_en_and_more.py  0007_strite.py  0008_alter_strite_f_code_des_alter_strite_geom_and_more.py  0009_strite2.py  0010_alter_strite2_geom_alter_strite2_lanes_and_more.py
templates/: Home.html  bas.html  index.html
